--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<div class="entirePage">
+<div class="entirePage mb-5">
 
 
 
@@ -49,11 +49,11 @@
   </div>
 </div>
 </div>
-</div>
-</div>
-<div class="footer">
-  <footer></footer>
-</div>
 
+  <footer>
+    {{>footerMain}}
+  </footer>
+</div>
+</div>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
+<script src="../public/js/index.js"></script>
