--- a/views/partials/footerMain.handlebars
+++ b/views/partials/footerMain.handlebars
@@ -1,5 +1,5 @@
     <div id="footer">
-     <div class="card text-center bg-dark mx-2 mt-3">
+     <div class="card text-center bg-dark mt-3">
         <div class="card-footer text-white font-weight-bold">
             <div class="row">
                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
