fixed the error

--- a/views/partials/footerMain.handlebars
+++ b/views/partials/footerMain.handlebars
@@ -1,4 +1,4 @@
-    <div id="footer p-5">
+    <div id="footer">
      <div class="card text-center bg-dark mt-3">
         <div class="card-footer text-white font-weight-bold">
             <div class="row">
