--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -25,6 +25,7 @@ h1{
  text-shadow:black 10px 10px 10px;
  
 }
+
 #nav{
   box-shadow:3px 3px 3px 3px;
 }
@@ -70,4 +71,7 @@ html, body
   width:100%;
   height: 6rem;
   padding-bottom: 2.5rem;
+}
+form{
+  margin-bottom:100px;
 }
