--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -46,8 +46,27 @@ h1{
   vertical-align: top;
   
 }
+#scrollResults::-webkit-scrollbar-track
+{
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: slategrey;
+}
+
+#scrollResults::-webkit-scrollbar
+{
+    width: 12px;
+    background-color: slategrey;
+}
+
+#scrollResults::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #0F3D57;
+}
 #mainContent{
-  background-color:slategray;
+  background-color:#0F3D57;
   height: 100%;
   display: table-cell;
 	width: 75%;
@@ -71,6 +90,7 @@ html, body
   width:100%;
   height: 6rem;
   padding-bottom: 2.5rem;
+  
 }
 form{
   margin-bottom:100px;
