--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -47,7 +47,7 @@
       
       <div class="row">
       <div class="col text-center">
-      <button class="btn text-white" id="startBtn"style="background-color:slategray;box-shadow:white 3px 3px 3px">Click Here to begin our services</button>
+      <button class="btn text-white" id="startBtn"style="background-color:  gray;box-shadow:white 3px 3px 3px">Click Here to begin our services</button>
       </div>
       </div>
       </div>
@@ -126,7 +126,7 @@
    <button class="btn btn-lg text-white" id="addProduct"style="background-color:#0F3D57;box-shadow:white 3px 3px 3px">Add Your Product!</button>
    </div>
    </div>
-</form>
+  </form>
         {{!-- backers_count,blurb,category,country,location,name,pledged,slug,source_url,urls,usd_pledged --}}
        
       </div>
