--- a/views/partials/footerMain.handlebars
+++ b/views/partials/footerMain.handlebars
@@ -1,7 +1,7 @@
     
     
     <div id="footer">
-     <div class="card text-center mx-2 bg-dark mt-3">
+     <div class="card text-center mx-2 mt-3"style="background-color:slategray;">
         <div class="card-footer text-white font-weight-bold">
             <div class="row">
                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
@@ -46,7 +46,7 @@
               <p>||</p>
               <a class="mx-2"href="#"style="color:white;">About Us</a>
             </div>
-        </div>
+            </div>
 
-    </div>
-    </div>    
+            </div>
+            </div>    
