--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,8 +9,8 @@
 <div class="bodyPage">
 <div id="nav">
  
-  <nav class="navbar navbar-expand-lg navbar-light mb-2" style="background-color:slategrey;">
-  <span class="navbar-brand badge badge-light" href="#">Designated Kicker</span>
+  <nav class="navbar navbar-expand-lg navbar-light text-white mb-2" style="background-color:slategrey;">
+  <span class="navbar-brand badge badge-light"><img width="30" height="30"src="../public/images/Logo 2 - Large.png" alt=""></span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -140,11 +140,8 @@
    </div>
   </form>
         {{!-- backers_count,blurb,category,country,location,name,pledged,slug,source_url,urls,usd_pledged --}}
-       
       </div>
-
       </div>
-  
    </div>
   </div>
 </div>
