first stab at api call

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -85,8 +85,8 @@
         </div>
           </div>
          <div class="col-lg-8">
-        <input type="text" placeholder="Search by your product name, description, commas must be used"style="width:100%;"class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-        </div>
+        <input type="text" placeholder="Search by your product name, description, commas must be used"style="width:100%;"class="form-control" id="searchKeywords" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+        </div> 
         <div class="col-lg-2">
          <button class="btn text-white" id="startSearch"style="background-color:slategray;box-shadow:white 3px 3px 3px">Click to Search</button>
         </div>
