working on sequelize

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -155,3 +155,5 @@
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="../public/js/index.js"></script>
+<script src="../public/js/results.js"></script>
+
