googlesearch returning object & fixed build errors

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,6 +2,11 @@ body{
   font-family: 'Crimson Pro', serif;
   background-color:white;
 }
+.entirePage{
+  position:relative;
+  height:100%;
+  width:100%;
+}
 .header{
   background-image:url(../images/header.jpg);
   height:400px;
@@ -84,7 +89,7 @@ html, body
   width:100%;
 }
 
-#footer{
+footer{
   bottom:0;
   position:fixed;
   width:100%;
@@ -97,4 +102,21 @@ form{
 }
 .nav-link{
   color:white !important;
+}
+
+img#logoBadge:hover {
+  -webkit-animation: mover 1s infinite  alternate;
+  animation: mover 1s infinite  alternate;
+}
+img#logoBadge:hover {
+  -webkit-animation: mover 1s infinite  alternate;
+  animation: mover 1s infinite  alternate;
+}
+@-webkit-keyframes mover {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-5px); }
+}
+@keyframes mover {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-5px); }
 }
