--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
 <div id="nav">
  
   <nav class="navbar navbar-expand-lg navbar-light text-white mb-2" style="background-color:slategrey;">
-  <span class="navbar-brand badge badge-light"><img width="30" height="30"src="../public/images/Logo 2 - Large.png" alt=""></span>
+  <span class="navbar-brand badge badge-light"><img width="30" id="logoBadge" height="30"src="../public/images/Logo 2 - Large.png" alt=""></span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -65,7 +65,7 @@
         <div class="input-group input-group-lg">
           <div class="col-lg-2">
           <div class="text-white d-flex justify-content-right"></h5>
-          <select class="custom-select" id="city">
+          <select class="custom-select" id="categoryInput">
             <option selected>Chose your Category</option>
             <option value="art">Art</option>
             <option value="comics">Comics</option>
@@ -157,7 +157,9 @@
     <footer>
     {{>footerMain}}
   </footer>
+  
 </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="../public/js/index.js"></script>
+<script src="../public/js/googlesearch.js"></script>
