--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -42,7 +42,7 @@ h1{
   border-spacing:10px 0px;
 }
 #scrollResults{
-  overflow-y: scroll;
+  
   height:100%;
   background-color:#0F3D57;
   box-shadow:3px 3px 3px 3px;
@@ -51,20 +51,20 @@ h1{
   vertical-align: top;
   
 }
-#scrollResults::-webkit-scrollbar-track
+body::-webkit-scrollbar-track
 {
     box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     border-radius: 10px;
     background-color: slategrey;
 }
 
-#scrollResults::-webkit-scrollbar
+body::-webkit-scrollbar
 {
     width: 12px;
     background-color: slategrey;
 }
 
-#scrollResults::-webkit-scrollbar-thumb
+body::-webkit-scrollbar-thumb
 {
     border-radius: 10px;
     box-shadow: inset 0 0 6px rgba(0,0,0,.3);
