--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -35,7 +35,10 @@
 <div id="main">
     <div class="bodyContainer mb-5">
     <div class="p-5 mx-1 mb-5 rounded" id="scrollResults">
-      <h1 style="text-decoration:underline;text-shadow:black 10px 10px 10px;">Display Results</h1>
+      <h1 class="mb-5"style="text-decoration:underline;text-shadow:black 10px 10px 10px;">Display Results</h1>
+      <div id="scrollContResults">
+
+      </div>
     </div>
     <div class="p-5 mb-5 rounded"id="mainContent">
       <div id="welcome">
