added javascript validations

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -69,7 +69,7 @@
           <div class="col-lg-2">
           <div class="text-white d-flex justify-content-right"></h5>
           <select class="custom-select" id="categoryInput">
-            <option selected>Chose your Category</option>
+            <option value=""selected>Chose your Category</option>
             <option value="art">Art</option>
             <option value="comics">Comics</option>
             <option value="crafts">Crafts</option>
