fixed error with items appending

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -78,12 +78,12 @@
             <option value="fashion">Fashion</option>
             <option value="film & video">Film & Video</option>
             <option value="food">Food</option>
+            <option value="games">Games</option>
             <option value="journalism">Journalism</option>
             <option value="music">Music</option>
             <option value="photography">Photography</option>
             <option value="publishing">Publishing</option>
             <option value="theater">Theater</option>
-
         </select>
         </div>
           </div>
