added some html

--- a/views/partials/about.handlebars
+++ b/views/partials/about.handlebars
@@ -1,5 +1,8 @@
     <h1 class="display-3 text-center"style="text-shadow:black 10px 10px 10px;">About Us!</h1>
     <hr style="box-shadow:3px 3px 3px;color:whitesmoke;">
     <p class="text-white text-center mb-5" style="font-size:24px;text-shadow:black 10px 10px 10px;">
-        
+    We are driven by simple founding principles, including entrepreneurship, independence and the mandate that everyone is an account executive.
+    Core to our culture are our values, which guide our behavior, support a client-centric approach, influence the way we work with each other, our clients and the community, and inspire great work. 
+    Excellence, curiosity and courage are very much at the heart of who we are and drive our continued evolution as a firm. They describe us at our very best and ensure we remain distinctive to our clients and to the industry.
+    OUR MISSION is to provide public relations counsel and strategic communications services which enable our clients to build strong relationships, and to influence attitudes and behaviors in a complex world.
     </p>
