--- a/views/partials/footerMain.handlebars
+++ b/views/partials/footerMain.handlebars
@@ -42,9 +42,9 @@
                 </div>
             </div>
             <div class="row d-flex justify-content-center">
-              <a class="contact mx-2"href="#"style="color:white;">Contact Us</a>
+              <a class="contactUs mx-2"href="/contactUs"style="color:white;">Contact Us</a>
               <p>||</p>
-              <a class="about mx-2"href="#"style="color:white;">About Us</a>
+              <a class="aboutUs mx-2"href="/aboutUs"style="color:white;">About Us</a>
             </div>
             </div>
 
