--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,53 +1,10 @@
-<div class="entirePage mb-5">
-
-
-
-<a href="/"><div class="header mb-1">
-  <h1 class="display-1 animated fadeInLeft"id="mainLogo1">Designated</h1>
-  <h1 class="display-1 animated fadeInLeft delay-1s"id="mainLogo2">Kicker</h1>
-</div></a>
-<div class="bodyPage">
-<div id="nav">
- 
-  <nav class="navbar navbar-expand-lg navbar-light text-white mb-2" style="background-color:slategrey;">
-  <span class="navbar-brand badge badge-light animated fadeIn delay-2s"><img width="30" id="logoBadge" height="30"src="../public/images/Logo 2 - Large.png" alt=""></span>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="about nav-link" href="#">About Us</a>
-      </li>
-      <li class="nav-item">
-        <a class="contact nav-link" href="#">Contact Us</a>
-      </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="email" placeholder="Username" aria-label="Username">
-      <input class="form-control mr-sm-2" type="password" placeholder="Password" aria-label="Password">
-      <button class="btn btn-dark my-2 mx-2 my-sm-0" id="clientLogin" type="submit">Client Login</button>
-      <button class="btn btn-dark my-2 mx-2 my-sm-0" id="register" type="submit">Register</button>
-      </form>
-   
-  </div>
-</nav>
-
-</div>
-
-<div id="main">
-    <div class="bodyContainer mb-5">
-    <div class="p-5 mx-1 mb-5 rounded" id="scrollResults">
+      <div class="p-5 mx-1 mb-5 rounded" id="scrollResults">
       <h1 class="mb-5 text-center"style="text-decoration:underline;text-shadow:black 10px 10px 10px;">Display Results</h1>
       <div id="scrollContResults">
-
       </div>
-    </div>
-    <div class="p-5 mb-5 rounded"id="mainContent">
+      </div>
+      <div class="p-5 mb-5 rounded"id="mainContent">
+      
       <div id="welcome">
       <h1 class="display-3"style="text-shadow:black 10px 10px 10px;">Welcome to the Designated Kicker</h1>
       <hr style="box-shadow:3px 3px 3px;color:whitesmoke;">
@@ -60,95 +17,10 @@
       
       <div class="row">
       <div class="col text-center">
-      <button class="btn text-white" id="startBtn"style="background-color:  gray;box-shadow:white 3px 3px 3px">Click Here to begin our services</button>
+      <a class="btn text-white" href="/startSearch"id="startBtn"style="background-color:gray;box-shadow:white 3px 3px 3px">Click Here to begin our services</a>
       </div>
       </div>
       </div>
-      <div class="p-5 mb-5 rounded" id="searchContent">
-        <h1 class="display-3 text-center"style="text-shadow:black 10px 10px 10px;">Search your idea!</h1>
-         <hr style="box-shadow:3px 3px 3px;color:whitesmoke;">
-        <br>
-        <p class="text-white mb-5" style="font-size:24px;text-shadow:black 10px 10px 10px;">Here we will search to see if theres anything that matches the product you want to create.
-          In the fields below please select a category from our dropdown menu and enter in the product name and description. We require the product name and the description.
-        </p>
-        <div class="form-group row"></div>
-        <div class="input-group input-group-lg">
-          <div class="col-lg-2">
-          <div class="text-white d-flex justify-content-right"></h5>
-          <select class="custom-select" id="categoryInput">
-            <option value=""selected>Chose your Category</option>
-            <option value="art">Art</option>
-            <option value="comics">Comics</option>
-            <option value="crafts">Crafts</option>
-            <option value="dance">Dance</option>
-            <option value="design">Design</option>
-            <option value="fashion">Fashion</option>
-            <option value="film & video">Film & Video</option>
-            <option value="food">Food</option>
-            <option value="games">Games</option>
-            <option value="journalism">Journalism</option>
-            <option value="music">Music</option>
-            <option value="photography">Photography</option>
-            <option value="publishing">Publishing</option>
-            <option value="theater">Theater</option>
-        </select>
-        </div>
-          </div>
-         <div class="col-lg-8">
-        <input type="text" placeholder="Search by your product name, and description"style="width:100%;"class="form-control" id="searchKeywords" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-        </div> 
-        <div class="col-lg-2">
-         <button class="btn text-white" id="startSearch"style="background-color:slategray;box-shadow:white 3px 3px 3px">Click to Search</button>
-        </div>
-        </div>
-        </div>
-      <div id="addItem">
-        <h1 class="display-3 text-center"style="text-shadow:black 10px 10px 10px;">Time to add your product!</h1>
-         <hr style="box-shadow:3px 3px 3px;color:whitesmoke;">
-        <br>
-         <p class="text-white mb-5" style="font-size:24px;text-shadow:black 10px 10px 10px;">Now that you know whats out there we
-           can help you get started! For a small transaction fee we will assist with the creation and marketing of your product! Answer
-           the following questions below to add your product to Designated Kicker!
-         </p>
-         <form class="text-white font-weight-bold">
-    <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputName">Name</label>
-      <input type="text" class="form-control" id="inputName" placeholder="Name of product">
-    </div>
-    <div class="form-group col-md-6">
-      <label for="inputCategory">Category</label>
-      <input type="text" class="form-control" id="inputCategory" placeholder="Category of your product">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="Blurb">Describe your product</label>
-    <input type="text" class="form-control" id="Blurb" placeholder="Description of your product">
-  </div>
-  <div class="form-group">
-    <label for="inputImage">Image Link</label>
-    <input type="text" class="form-control" id="inputImage" placeholder="url of your products image">
-  </div>
-  <div class="form-row mb-5">
-    <div class="form-group col-md-6">
-      <label for="inputCity">City</label>
-      <input type="text" placeholder="City"class="form-control" id="inputCity">
-    </div>
-    <div class="form-group col-md-4">
-      <label for="inputState">State</label>
-     <input type="text" placeholder="State"class="form-control" id="inputState">
-    </div>
-    <div class="form-group col-md-2">
-      <label for="inputPledge">Pledge Goal</label>
-      <input type="text" placeholder="$$$$$$$$" class="form-control" id="inputPledge">
-    </div>
-  </div>
-    <div class="form-row">
-      <div class="col text-center">
-   <button class="btn btn-lg text-white" id="addProduct"style="background-color:#0F3D57;box-shadow:white 3px 3px 3px">Add Your Product!</button>
-   </div>
-   </div>
-  </form>
         {{!-- backers_count,blurb,category,country,location,name,pledged,slug,source_url,urls,usd_pledged --}}
       </div>
       <div class="p-5 mb-5 rounded"id="itemAdded">
@@ -164,13 +36,6 @@
    </div>
   </div>
 </div>
-    <footer>
-    {{>footerMain}}
-  </footer>
+   
   
 </div>
-
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="../public/js/index.js"></script>
-<script src="../public/js/googlesearch.js"></script>
-<script src="../public/js/results.js"></script>
