--- a/views/itemAdd.handlebars
+++ b/views/itemAdd.handlebars
@@ -3,11 +3,37 @@
     <div class="p-5 mb-5 rounded"id="mainContent">
     <h1 class="display-3 text-center bg-success rounded"style="text-shadow:black 10px 10px 10px;">Success!!</h1>
     <hr style="box-shadow:3px 3px 3px;color:whitesmoke;">
-    <p class="text-white text-center mb-5" style="font-size:24px;text-shadow:black 10px 10px 10px;">
+    <p class="text-white text-center mb-2" style="font-size:24px;text-shadow:black 10px 10px 10px;">
     Your Item has been added to the list of the products we represent</p>
     <br>
     <p class="text-white text-center mb-5" style="font-size:24px;text-shadow:black 10px 10px 10px;">
     Check out the list of other products we support!!</p>
-    <div id="tableList">
-
-    </div>
+    <table class="table table-dark table-bordered table-striped">
+    <thead>
+        <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Backers</th>
+        <th scope="col">Pledged</th>
+        <th scope="col">Category</th>
+        <th scope="col">Source Url</th>
+        <th scope="col">Blurb</th>
+        </tr>
+        </thead>
+        <tbody id="tbody">
+            {{#each test}}
+            <tr>
+            <td>{{this.name}}</td>
+            <td>{{this.backers}}</td>
+            <td>{{this.pledged}}</td>
+            <td>{{this.category}}</td>
+            <td><a href="{{this.url}}">project source</a></td>
+            <td>{{this.Blurb}}</td>
+            </tr>
+            {{/each}}
+        </tbody>
+        </table>
+         <div class="row">
+      <div class="col text-center">
+      <a class="btn text-white" href="/recent"id="recentSearch"style="background-color:gray;box-shadow:white 3px 3px 3px">Click Here to see our most Recently Added</a>
+      </div>
+      </div>
