--- a/views/partials/footerMain.handlebars
+++ b/views/partials/footerMain.handlebars
@@ -7,7 +7,7 @@
                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                     <div class="studentName1 bounceIn delay-3s">
                         <div class="img" id="Aaron"><a href="https://abooth9422.github.io/" target="_blank">
-                                <img src="../public/images/git.png" class="rounded-circle animated zoomInDown fast delay-1s" width="40" height="40"></a>
+                                <img src="../public/images/git.png" class="rounded-circle animated animated flipInY slow" width="40" height="40"></a>
                             <label for="Aaron" class="mx-4">Aaron Booth</label>
                         </div>
                     </div>
@@ -15,7 +15,7 @@
                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                     <div class="studentName2 bounceIn delay-4s">
                         <div class="img" id="Ellen"><a href="https://github.com/ellennewellevans" target="_blank">
-                                <img src="../public/images/git2.png" class="rounded-circle animated zoomInDown fast delay-2s" width="40"
+                                <img src="../public/images/git2.png" class="rounded-circle animated flipInY delay-1s slow" width="40"
                                     height="40"></a>
                             <label for="Ellen" class="mx-4">Ellen Evans</label>
                         </div>
@@ -24,7 +24,7 @@
                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                     <div class="studentName3 bounceIn delay-5s">
                         <div class="img" id="Shak"><a href="https://github.com/swilliams2077" target="_blank">
-                                <img src="../public/images/git3.png" class="rounded-circle animated zoomInDown fast delay-3s" width="40"
+                                <img src="../public/images/git3.png" class="rounded-circle animated flipInY delay-2s slow" width="40"
                                     height="40"></a>
                             <label for="Shak" class="mx-4">Shak Williams</label>
                         </div>
@@ -34,7 +34,7 @@
                     <div class="studentName4 bounceIn delay-6s">
                         <div class="img" id="Justin"><a href="https://github.com/JustinConforti"
                                 target="_blank">
-                                <img src="../public/images/git.png" class="rounded-circle animated zoomInDown fast delay-4s" width="40"
+                                <img src="../public/images/git.png" class="rounded-circle animated flipInY delay-3s slow" width="40"
                                     height="40"></a>
                             <label for="Justin" class="mx-4">Justin Conforti</label>
                         </div>
