--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -84,7 +84,7 @@
   </div>
     <div class="form-row">
       <div class="col text-center">
-   <a class="btn btn-lg text-white" href="/itemAdd"role="button"id="addProduct"style="background-color:#0F3D57;box-shadow:white 3px 3px 3px">Add Your Product!</a>
+   <a class="btn btn-lg text-white" role="button"id="addProduct"style="background-color:#0F3D57;box-shadow:white 3px 3px 3px">Add Your Product!</a>
    </div>
    </div>
    </div>
