database query functioning

--- a/views/itemAdd.handlebars
+++ b/views/itemAdd.handlebars
@@ -23,11 +23,11 @@
             {{#each test}}
             <tr>
             <td>{{this.name}}</td>
-            <td>{{this.backers}}</td>
+            <td>{{this.backers_count}}</td>
             <td>{{this.pledged}}</td>
-            <td>{{this.category}}</td>
-            <td><a href="{{this.url}}">project source</a></td>
-            <td>{{this.Blurb}}</td>
+            <td>{{this.parent_category}}</td>
+            <td><a href="{{this.urls}}">project source</a></td>
+            <td>{{this.blurb}}</td>
             </tr>
             {{/each}}
         </tbody>
