trying to get passport redirect to work

--- a/views/itemAdd.handlebars
+++ b/views/itemAdd.handlebars
@@ -2,7 +2,7 @@
    
     <div class="p-5 mb-5 rounded"id="mainContent">
     <div class="row d-flex justify-content-center ">
-    <h1 class="display-3 text-center bg-success"style="border-radius:50px;box-shadow:black 3px 3px 3px 3px;text-shadow:black 10px 10px 10px;width:fit-content">Success!</h1>
+    <h1 class="display-3 text-center bg-success"style="border-radius:50px;box-shadow:black 3px 3px 3px 3px;text-shadow:black 10px 10px 10px;width:28%;">Success!</h1>
     </div>
     <hr style="box-shadow:3px 3px 3px;color:whitesmoke;">
     <p class="text-white text-center mb-2" style="font-size:24px;text-shadow:black 10px 10px 10px;">
