--- a/views/recent.handlebars
+++ b/views/recent.handlebars
@@ -23,7 +23,7 @@
             <td>{{this.category}}</td>
             <td>{{this.pledge_goal}}</td>
             <td>{{this.category}}</td>
-            <td><a href="{{this.image_link}}">{{this.image_link}}</a></td>
+            <td><a href="{{this.image_link}}">Project Source</a></td>
             <td>{{this.product_description}}</td>
             </tr>
             {{/each}}
